
Commands:
 * Added @moniker, to allow colored names. See 'help monikers' for more.
   Requested by Mikoto Misaka. Idea from [MUX]. [MG]

Hardcode:
 * A number of changes have been made to accomodate monikers. Notably, a lot
   of calls to the Name() macro now use the AName() macro. See the 
   HACKING.185 file for more info. [MG]

Fixes:
 * Commands which take multiple right-hand-side arguments could only have
   8191-length arguments, instead of the usual 8192. Reported by Jules. [MG]
 * It was possible to return non-printable characters from an SQL database,
   which could cause undefined weirdness. Reported by spork. [MG]

Minor changes:
 * strreplace() now works harder to keep existing ANSI intact, when you
   replace an un-ansi'd string into an ansi'd one. [MG]
 * colors(...,xterm256) can now return colors 0 to 15, to avoid confusion
   when converting xterm -> hex -> xterm. Reported by Trinsec. [MG]
   
Functions:
 * delete(), replace() and insert() have been renamed to strdelete(), 
   lreplace() and linsert(), respectively, for clarity and conformity. The
   original names remain as aliases. [MG]

Version 1.8.5 patchlevel 4                                 Mar 17, 2013

Major changes:
 * The player_name_len @config option is now the maximum length of a player
   name, instead of the maximum length+1, because doing it that way was
   rather silly. You may wish to lower yours by 1 now to compensate.
   Suggested by Mercutio. [MG]
 * Having unescaped commas in the final arg of a function call is now
   deprecated, and will eventually become illegal. Any existing code which
   does this will spam you with a warning until you change it. [MG]
 * The stack (%0-%9) can now hold up to 30 arguments, with the additional 20
   available through v(10) to v(29). $-commands, @functions and many built-in
   commands and functions (such as ufun(), @mapsql, etc) now make use of
   these args. [MG] [MUX] [Rhost]

Commands: